--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -170,7 +170,7 @@
                 <div ng-show="vm.players.length == 5"> 
                   <br> 
                   <br>
-                  <button ng-click="vm.resetplayers()" type="button" class="btn btn-info">RESET</button>
+                  <button ng-click="vm.resetplayers()" type="button" class="btn btn-info" id="resetbutton">RESET</button>
                 </div> 
 
               <% end %>
