--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -253,7 +253,7 @@ span#ultimate {
 #about {
   margin-top: -20px; 
   padding-top: 20px; 
-  background: url("basketballcourt.jpg");
+  background-image: url("basketballcourt.jpg");
   background-size: cover; 
   background-repeat: no-repeat;
   height: 580px; 
@@ -551,3 +551,13 @@ h4#modalfont {
   background-color: green; 
   border-bottom: 10px solid $main_yellow; 
 }
+
+#resetbutton {
+  background-color: green; 
+  font-family: $font; 
+}
+
+#resetbutton:hover{
+      box-shadow: 0px 0px 1px 1px $main-yellow; 
+
+  }
